add users and authentications plugins

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ PGPASSWORD=<YOUR_POSTGRES_PASSWORD>
 PGHOST=<YOUR_POSTGRES_HOST>
 PGDATABASE=<YOUR_POSTGRES_DATABASE>
 PGPORT=<YOUR_POSTGRES_PORT>
+
+ACCESS_TOKEN_KEY=<YOUR_ACCESS_TOKEN>
+REFRESH_TOKEN_KEY=<YOUR_REFRESH_TOKEN>
