--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,7 @@ PGHOST=<YOUR_POSTGRES_HOST>
 PGDATABASE=<YOUR_POSTGRES_DATABASE>
 PGPORT=<YOUR_POSTGRES_PORT>
 
+# JWT configuration for authentication
 ACCESS_TOKEN_KEY=<YOUR_ACCESS_TOKEN>
 REFRESH_TOKEN_KEY=<YOUR_REFRESH_TOKEN>
+ACCESS_TOKEN_AGE=<YOUR_ACCESS_TOKEN_AGE>
