--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
     "@hapi/jwt": "^3.2.1",
+    "amqplib": "^0.10.9",
     "auto-bind": "^4.0.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.2",
     "joi": "^18.0.1",
     "nanoid": "^3.1.20",
     "node-pg-migrate": "^8.0.3",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3"
   }
 }
