--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   "rules": {
     "no-console": "off",
     "no-underscore-dangle": ["error", { "allow": ["_export"], "allowAfterThis": true }],
-    "camelcase": ["error", { "properties": "never", "ignoreDestructuring": true }]
+    "camelcase": ["error", { "properties": "never", "ignoreDestructuring": true }],
+    "import/no-extraneous-dependencies": "off"
   }
 }
