Implement Server-Side Caching for GET Liked Album

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ PORT=5000
 
 # PostgreSQL configuration
 PGUSER=<YOUR_POSTGRES_USERNAME>
-PGPASSWORD=<YOUR_POSTGRES_PASSWORD>
+PGPASSWORD=localhost
 PGHOST=<YOUR_POSTGRES_HOST>
 PGDATABASE=<YOUR_POSTGRES_DATABASE>
 PGPORT=<YOUR_POSTGRES_PORT>
@@ -13,3 +13,9 @@ PGPORT=<YOUR_POSTGRES_PORT>
 ACCESS_TOKEN_KEY=<YOUR_ACCESS_TOKEN>
 REFRESH_TOKEN_KEY=<YOUR_REFRESH_TOKEN>
 ACCESS_TOKEN_AGE=<YOUR_ACCESS_TOKEN_AGE>
+
+# RabbitMQ configuration
+RABBITMQ_SERVER=amqp:/<YOUR_RABBITMQ_SERVER>
+
+# Redis configuration
+REDIS_SERVER=localhost
