--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,6 @@
     "no-console": "off",
     "no-underscore-dangle": ["error", { "allow": ["_export"], "allowAfterThis": true }],
     "camelcase": ["error", { "properties": "never", "ignoreDestructuring": true }],
-    "import/no-extraneous-dependencies": "off",
-    "max-len": ["error", { "code": 80, "ignoreComments": true, "ignoreUrls": true, "ignoreTemplateLiterals": true }]
+    "import/no-extraneous-dependencies": "off"
   }
 }
